src/test/ui/malformed/malformed-interpolated.stderr
error: suffixed literals are not allowed in attributes
  --> $DIR/malformed-interpolated.rs:12:8
   |
LL | check!(0u8);
   |        ^^^
   |
   = help: instead of using a suffixed literal (`1u8`, `1.0f32`, etc.), use an unsuffixed version (`1`, `1.0`, etc.)

error: unexpected token: `-0`
  --> $DIR/malformed-interpolated.rs:13:8
   |
LL | check!(-0);
   |        ^^

error: unexpected token: `0 + 0`
  --> $DIR/malformed-interpolated.rs:14:8
   |
LL | check!(0 + 0);
   |        ^^^^^

error: aborting due to 3 previous errors

